--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -6,8 +6,21 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid2" columns="1">
                 <wm-gridrow name="gridrow16">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn27" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn27" padding="1em unset">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow1">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="unset unset 2em unset">
+                        <wm-label padding="unset 0.5em" name="label1" caption="My Municipality" fontweight="bold" fontsize="15"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="unset unset 2em unset">
+                        <wm-composite name="composite1">
+                            <wm-label class="col-md-3 control-label" name="label2" caption="Select Municipality"></wm-label>
+                            <wm-container class="col-md-9" name="container1">
+                                <wm-select name="selectStandardUserMunicipalites" dataset="bind:Variables.EmployeesMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.EmployeesMunicipalities.firstRecord"></wm-select>
+                            </wm-container>
+                        </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17">
@@ -18,7 +31,64 @@
                 <wm-gridrow name="gridrow11">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn18">
                         <wm-accordion name="accordion1">
-                            <wm-accordionpane name="accordionpane1" title="Pending Review"></wm-accordionpane>
+                            <wm-accordionpane name="accordionpane1" title="Pending Review">
+                                <wm-livegrid formlayout="dialog" name="livegrid2">
+                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ReviewVendorApprovals.dataSet" navigation="Basic" name="gridPending">
+                                        <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
+                                        <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Municipalities"></wm-grid-column>
+                                        <wm-grid-column binding="vendor.companyName" caption="Company Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Vendor"></wm-grid-column>
+                                        <wm-grid-column binding="vendor.companyEmail" caption="Company Email" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Vendor"></wm-grid-column>
+                                        <wm-grid-action key="addNewRow" display-name="New" iconclass="wi wi-plus" show="true" class="btn-primary" action="addNewRow()" position="footer" shortcutkey=""></wm-grid-action>
+                                        <wm-grid-row-action key="updaterow" display-name="" title="Edit" iconclass="wi wi-pencil" show="true" class="btn-transparent" action="editRow()"></wm-grid-row-action>
+                                        <wm-grid-row-action key="deleterow" display-name="" title="Delete" iconclass="wi wi-trash" show="true" class="btn-transparent" action="deleteRow()"></wm-grid-row-action>
+                                    </wm-grid>
+                                    <wm-liveform novalidate="false" errormessage="" title="Vendorapprovals Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.ReviewVendorApprovals.dataSet" captionalign="left" captionposition="top"
+                                    name="liveform2">
+                                        <wm-layoutgrid columns="3" name="layoutgrid3">
+                                            <wm-gridrow name="gridrow14">
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn21">
+                                                    <wm-form-field name="dateApproved" displayname="Date Approved" required="false" show="true" generator="assigned" primary-key="false" key="dateApproved" type="date" is-related="false" pc-display="true" mobile-display="true"
+                                                    widget="date"></wm-form-field>
+                                                </wm-gridcolumn>
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn22">
+                                                    <wm-form-field name="approvedBy" displayname="Approved By" required="false" show="true" generator="assigned" primary-key="false" key="approvedBy" type="string" is-related="false" maxchars="255" pc-display="true"
+                                                    mobile-display="true" widget="text"></wm-form-field>
+                                                </wm-gridcolumn>
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn23">
+                                                    <wm-form-field name="expiresDate" displayname="Expires Date" required="false" show="true" generator="assigned" primary-key="false" key="expiresDate" type="date" is-related="false" pc-display="true" mobile-display="true"
+                                                    widget="date"></wm-form-field>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                            <wm-gridrow name="gridrow15">
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn24">
+                                                    <wm-form-field name="active" displayname="Active" required="false" show="true" generator="assigned" primary-key="false" key="active" type="boolean" is-related="false" pc-display="true" mobile-display="true"
+                                                    widget="checkbox"></wm-form-field>
+                                                </wm-gridcolumn>
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn25">
+                                                    <wm-form-field name="approvalStatus" displayname="Approval Status" required="false" show="true" generator="assigned" primary-key="false" key="approvalStatus" type="string" is-related="false" maxchars="255"
+                                                    pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                                </wm-gridcolumn>
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn26">
+                                                    <wm-form-field name="reviewer" displayname="Reviewer" required="false" show="true" generator="assigned" primary-key="false" key="reviewer" type="string" is-related="false" maxchars="255" pc-display="true"
+                                                    mobile-display="true" widget="text"></wm-form-field>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                            <wm-gridrow name="gridrow16_1">
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn27_1">
+                                                    <wm-form-field name="municipalities" displayname="Municipalities" required="false" show="true" generator="assigned" primary-key="false" key="municipalities" type="list" is-related="true" pc-display="true"
+                                                    mobile-display="true" widget="select"></wm-form-field>
+                                                </wm-gridcolumn>
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn28_1">
+                                                    <wm-form-field name="vendor" displayname="Vendor" required="false" show="true" generator="assigned" primary-key="false" key="vendor" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                                    widget="select"></wm-form-field>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                        </wm-layoutgrid>
+                                        <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                                        <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                    </wm-liveform>
+                                </wm-livegrid>
+                            </wm-accordionpane>
                             <wm-accordionpane name="accordionpane2" title="Approved Vendors"></wm-accordionpane>
                             <wm-accordionpane name="accordionpane3" title="Suspended Vendors"></wm-accordionpane>
                         </wm-accordion>
