--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -9,13 +9,34 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn9"></wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow1" padding="2em unset">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn1"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn5">
-                        <wm-text name="Passwordtxt" placeholder="Enter New Password" type="password" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-text>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn2">
-                        <wm-button class="btn-default btn-primary" caption="Submit" type="button" margin="unset 0.5em" name="button1" on-click="Variables.resetPassword.invoke()" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-button>
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn20">
+                        <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
+                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)">
+                            <wm-layoutgrid columns="1" name="layoutgrid2">
+                                <wm-gridrow name="gridrow9">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn23">
+                                        <wm-form-field readonly="false" name="token" displayname="Token" key="token" type="string" show="false" widget="text"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow10">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn24">
+                                        <wm-form-field readonly="false" name="newPassword" displayname="New Password" key="newPassword" type="string" show="true" widget="text" placeholder="Enter Password" required="true" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        validationmessage="Passwords must contain a minimum of 8 characters and also contain minimum of 1 letter, 1 number and one special symbol" inputtype="password"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow11">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn25">
+                                        <wm-form-field displayname="Retype Password" widget="text" show="true" type="custom" name="retypePassword" placeholder="Re Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        required="true" validationmessage="Passwords must contain a minimum of 8 characters and also contain minimum of 1 letter, 1 number and one special symbol" inputtype="password"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                            <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
+                                <wm-button caption="Cancel" type="button" class="btn-warning" name="button3"></wm-button>
+                                <wm-button caption="Reset Password" type="submit" class="btn-primary" name="button4"></wm-button>
+                            </wm-buttongroup>
+                        </wm-form>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
