--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -33,7 +33,7 @@
                                 </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
-                                <wm-button caption="Cancel" type="button" class="btn-warning" name="button3"></wm-button>
+                                <wm-button caption="Cancel" type="button" class="btn-warning" name="button3" on-click="button3Click($event, $scope)"></wm-button>
                                 <wm-button caption="Reset Password" type="submit" class="btn-primary" name="button4"></wm-button>
                             </wm-buttongroup>
                         </wm-form>
