--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -5,7 +5,7 @@
                 <wm-gridrow name="gridrow1" padding="2em unset">
                     <wm-gridcolumn columnwidth="3" name="gridcolumn1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn2" horizontalalign="center">
-                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="150pt" height="150pt"></wm-picture>
+                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="100pt" height="100pt"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="3" name="gridcolumn5"></wm-gridcolumn>
                 </wm-gridrow>
@@ -21,7 +21,7 @@
                 <wm-gridrow name="gridrow3" padding="2em unset">
                     <wm-gridcolumn columnwidth="3" name="gridcolumn7"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn8" horizontalalign="center">
-                        <wm-anchor margin="unset 0.5em" name="signup" caption="Click here to signup" hyperlink="https://www.wavemakeronline.com/run-vqs2y8q615/CivicXpress/#/UserCreation" show="false"></wm-anchor>
+                        <wm-anchor margin="unset 0.5em" name="signup" caption="Click here to SignUp" hyperlink="https://www.wavemakeronline.com/run-vqs2y8q615/CivicXpress/#/UserCreation" show="false"></wm-anchor>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="3" name="gridcolumn9"></wm-gridcolumn>
                 </wm-gridrow>
