--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -47,7 +47,8 @@
                                                 <wm-grid-column binding="joiningDate" caption="Joining Date" type="date" generator="assigned" readonly="true" edit-widget-type="date" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="250px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                <wm-grid-row-action key="customRow" display-name="ViewProfile" show="true" class="btn-transparent" iconclass="wi wi-user" title="Custom rowActions" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="ViewProfile" show="true" class="btn-transparent" iconclass="wi wi-user" title="Custom rowActions" action="Widgets.dialogUserProfile.open()"
+                                                disabled="false"></wm-grid-row-action>
                                                 <wm-grid-row-action key="customRow1" display-name="Remove" show="true" class="btn-transparent" iconclass="wi wi-delete" title="Custom rowActions" action="Variables.DeleteFromVendorUsers.invoke()"
                                                 disabled="false"></wm-grid-row-action>
                                             </wm-grid>
@@ -55,7 +56,20 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpane2" title="Company Admins"></wm-tabpane>
+                            <wm-tabpane name="tabpane2" title="Company Admins">
+                                <wm-layoutgrid name="layoutgrid2_1">
+                                    <wm-gridrow name="gridrow4" padding="1em unset">
+                                        <wm-gridcolumn columnwidth="4" name="gridcolumn5"></wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="4" name="gridcolumn6"></wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="4" name="gridcolumn9" horizontalalign="center">
+                                            <wm-button class="btn-default btn-primary" caption="Add Admin" type="button" margin="unset 0.5em" name="buttonAddAdmin" iconclass="wi wi-person-add" on-click="Widgets.dialogAddUser.open()"></wm-button>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow5">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn7"></wm-gridcolumn>
+                                    </wm-gridrow>
+                                </wm-layoutgrid>
+                            </wm-tabpane>
                         </wm-tabs>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -63,9 +77,9 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
-    <wm-view class="dialog-view" name="view1">
+    <wm-view class="dialog-view" name="viewAdd">
         <wm-dialog dialogtype="design-dialog" modal="true" title="AddUser" iconclass="wi wi-person-add" name="dialogAddUser">
-            <wm-dialogactions name="dialogactions1">
+            <wm-dialogactions name="dialogactionsAdd">
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button7"></wm-button>
                 <wm-button class="btn-primary" caption="Add" name="buttonAdd" on-click="Variables.AddUsersToCompany.invoke()"></wm-button>
             </wm-dialogactions>
@@ -73,6 +87,70 @@
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn10" padding="1em unset">
                         <wm-search name="searchUser" dataset="bind:Variables.AllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="All Fields"></wm-search>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="view2">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="UserProfile" iconclass="wi wi-edit" name="dialogUserProfile">
+            <wm-dialogactions name="dialogactions2">
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button7_1"></wm-button>
+            </wm-dialogactions>
+            <wm-layoutgrid name="layoutgrid4">
+                <wm-gridrow name="gridrow6">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
+                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridVendorUsers.selecteditem.users.id+&quot;/content/photo&quot;
+" shape="circle" width="100pt" height="100pt"></wm-picture>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn14"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow7">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn12"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn15" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label8" fontweight="bold" fontsize="20" caption="bind:Widgets.gridVendorUsers.selecteditem.users.firstName+&quot; &quot;+Widgets.gridVendorUsers.selecteditem.userslastName"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn13"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn16"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn17" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label9" caption="bind:Widgets.gridVendorUsers.selecteditem.users.email"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn18"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn19" padding="1em unset 1em 1em">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" name="label10" fontweight="bold" width="100%" caption="Address1"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label11" caption="bind:Widgets.gridVendorUsers.selecteditem.users.address1"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn20"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn21" padding="1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" name="label12" caption="Address2"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.address2" name="label13"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn22" padding="unset unset 1em 1em">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="City" name="label14"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.city" name="label15"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.city" name="label19"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow11">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn25" padding="unset unset 1em 1em">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PostalCode" name="label18"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.postalCode" name="label20"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn26"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn27" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PhoneNumber" name="label17"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.phoneNumber" name="label21"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
